# neuroloom_re_pipeline

./: COMPETITIVE_ANALYSIS.md  INTEGRATION_PLAN.md  LICENSE  MISSION_REPORT.md  README.md  RE_PIPELINE_IMPLEMENTATION_ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md  governance_proposal.md  pattern_submission.md  security_advisory.md
.github/workflows/: ci.yml  decon_pipeline.yml  mutate.yml  pattern_distill.yml  rebuild.yml
federation/broadcasts/: bc_1774382400000_manifest.json
output/stage3_exec_1774375391/: mutated_dna.json
output/stage3_exec_1774376174/: mutated_dna.json
output/stage3_exec_1774377076/: mutated_dna.json
output/stage3_exec_1774377900/: mutated_dna.json
output/stage3_exec_1774378800/: mutated_dna.json
output/stage3_exec_1774379700/: mutated_dna.json
output/stage3_exec_1774380600/: mutated_dna.json
output/stage3_exec_1774381500/: mutated_dna.json
output/stage4_exec_1774377901/: STAGE4_REPORT.md  crystallized_artifacts.json
src/: __init__.py
src/atomic_layer/: __init__.py  memory.py
src/config/: __init__.py  constants.py
src/decon/: __init__.py
src/distill/: __init__.py
src/governance/: __init__.py  snp_monitor.py
src/hmv/: __init__.py
src/mutate/: __init__.py  mutation_engine.py
src/rebuild/: __init__.py  crystallizer.py
src/tests/: __init__.py  test_mutation_engine.py  test_rebuild.py
stage4/1774376534/: crystallized_artifact.json
stage4/1774378511/: crystallized_artifact.json
stage4/1774378801/: crystallized_artifact.json
